{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 252,
  "lineage": "f392804b-31db-add2-eda7-5bb90502f434",
  "resources": [
    {
      "module": "module.load_balance",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:572498579257:loadbalancer/app/alb-cicd-github-actions/ad0005f73bcaeae1",
            "arn_suffix": "app/alb-cicd-github-actions/ad0005f73bcaeae1",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-cicd-github-actions-699558689.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:572498579257:loadbalancer/app/alb-cicd-github-actions/ad0005f73bcaeae1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-cicd-github-actions",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0337026bb2f6f2e75"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ba3081e12909b568"
              },
              {
                "subnet_id": "subnet-0d18412589b1348d6"
              }
            ],
            "subnets": [
              "subnet-0ba3081e12909b568",
              "subnet-0d18412589b1348d6"
            ],
            "tags": {
              "Name": "alb-cicd-github-actions"
            },
            "tags_all": {
              "Name": "alb-cicd-github-actions"
            },
            "vpc_id": "vpc-0516980e3e7366903",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.load_balance",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:572498579257:listener/app/alb-cicd-github-actions/ad0005f73bcaeae1/3dfc3e5cdbe29f72",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:572498579257:targetgroup/target-group-blue/d75725cae338ddbc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:572498579257:listener/app/alb-cicd-github-actions/ad0005f73bcaeae1/3dfc3e5cdbe29f72",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:572498579257:loadbalancer/app/alb-cicd-github-actions/ad0005f73bcaeae1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balance.aws_lb.load_balancer",
            "module.load_balance.aws_lb_target_group.nodejs_target_group_blue",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.load_balance",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:572498579257:listener/app/alb-cicd-github-actions/ad0005f73bcaeae1/4a8881b2f917ee75",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:572498579257:targetgroup/target-group-green/286cf1d65830bb57",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:572498579257:listener/app/alb-cicd-github-actions/ad0005f73bcaeae1/4a8881b2f917ee75",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:572498579257:loadbalancer/app/alb-cicd-github-actions/ad0005f73bcaeae1",
            "mutual_authentication": [],
            "port": 81,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balance.aws_lb.load_balancer",
            "module.load_balance.aws_lb_target_group.nodejs_target_group_green",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.load_balance",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nodejs_target_group_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:572498579257:targetgroup/target-group-blue/d75725cae338ddbc",
            "arn_suffix": "targetgroup/target-group-blue/d75725cae338ddbc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:572498579257:targetgroup/target-group-blue/d75725cae338ddbc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group-blue",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0516980e3e7366903"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balance",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nodejs_target_group_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:572498579257:targetgroup/target-group-green/286cf1d65830bb57",
            "arn_suffix": "targetgroup/target-group-green/286cf1d65830bb57",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:572498579257:targetgroup/target-group-green/286cf1d65830bb57",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group-green",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0516980e3e7366903"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:572498579257:network-acl/acl-07f4a824937fb1b58",
            "default_network_acl_id": "acl-07f4a824937fb1b58",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07f4a824937fb1b58",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "572498579257",
            "subnet_ids": [
              "subnet-03fb178ffd5c51965",
              "subnet-08161a5726cfd5873",
              "subnet-0d18412589b1348d6"
            ],
            "tags": {
              "Name": "VPC Github Actions"
            },
            "tags_all": {
              "Name": "VPC Github Actions"
            },
            "vpc_id": "vpc-0516980e3e7366903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:572498579257:route-table/rtb-0038dca4f6771fbcd",
            "default_route_table_id": "rtb-0038dca4f6771fbcd",
            "id": "rtb-0038dca4f6771fbcd",
            "owner_id": "572498579257",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "VPC Github Actions"
            },
            "tags_all": {
              "Name": "VPC Github Actions"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0516980e3e7366903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:572498579257:security-group/sg-026091a12982c40be",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-026091a12982c40be",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "572498579257",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC Github Actions"
            },
            "tags_all": {
              "Name": "VPC Github Actions"
            },
            "vpc_id": "vpc-0516980e3e7366903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b14f57b4f2bd401",
            "domain": "vpc",
            "id": "eipalloc-05b14f57b4f2bd401",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-250-156-94.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.156.94",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VPC Github Actions"
            },
            "tags_all": {
              "Name": "VPC Github Actions"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:572498579257:internet-gateway/igw-0a3838fa5c9b71d45",
            "id": "igw-0a3838fa5c9b71d45",
            "owner_id": "572498579257",
            "tags": {
              "Name": "VPC Github Actions"
            },
            "tags_all": {
              "Name": "VPC Github Actions"
            },
            "vpc_id": "vpc-0516980e3e7366903"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b14f57b4f2bd401",
            "association_id": "eipassoc-06075406b751a31f9",
            "connectivity_type": "public",
            "id": "nat-09025355207004aff",
            "network_interface_id": "eni-0abece34cbecee4ab",
            "private_ip": "10.0.1.21",
            "public_ip": "13.250.156.94",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d18412589b1348d6",
            "tags": {
              "Name": "VPC Github Actions"
            },
            "tags_all": {
              "Name": "VPC Github Actions"
            }
          },
          "dependencies": [
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bb5fd637486e57601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09025355207004aff",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bb5fd637486e5760",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a3838fa5c9b71d45",
            "id": "r-rtb-0781f91d1a881131d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0781f91d1a881131d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:572498579257:route-table/rtb-0bb5fd637486e5760",
            "id": "rtb-0bb5fd637486e5760",
            "owner_id": "572498579257",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC Github Actions"
            },
            "tags_all": {
              "Name": "VPC Github Actions"
            },
            "timeouts": null,
            "vpc_id": "vpc-0516980e3e7366903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:572498579257:route-table/rtb-0781f91d1a881131d",
            "id": "rtb-0781f91d1a881131d",
            "owner_id": "572498579257",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC Github Actions"
            },
            "tags_all": {
              "Name": "VPC Github Actions"
            },
            "timeouts": null,
            "vpc_id": "vpc-0516980e3e7366903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdf2afdf15492c02",
            "route_table_id": "rtb-0bb5fd637486e5760",
            "subnet_id": "subnet-03fb178ffd5c51965"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f0b8f995784b917",
            "route_table_id": "rtb-0bb5fd637486e5760",
            "subnet_id": "subnet-08161a5726cfd5873"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f346ce8788105aa1",
            "route_table_id": "rtb-0781f91d1a881131d",
            "subnet_id": "subnet-0d18412589b1348d6"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a3bb482e6c92e32",
            "route_table_id": "rtb-0781f91d1a881131d",
            "subnet_id": "subnet-0ba3081e12909b568"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:572498579257:subnet/subnet-03fb178ffd5c51965",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fb178ffd5c51965",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "572498579257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Github Actions"
            },
            "tags_all": {
              "Name": "VPC Github Actions"
            },
            "vpc_id": "vpc-0516980e3e7366903"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:572498579257:subnet/subnet-08161a5726cfd5873",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08161a5726cfd5873",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "572498579257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Github Actions"
            },
            "tags_all": {
              "Name": "VPC Github Actions"
            },
            "vpc_id": "vpc-0516980e3e7366903"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:572498579257:subnet/subnet-0d18412589b1348d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d18412589b1348d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "572498579257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Github Actions"
            },
            "tags_all": {
              "Name": "VPC Github Actions"
            },
            "vpc_id": "vpc-0516980e3e7366903"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:572498579257:subnet/subnet-0ba3081e12909b568",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba3081e12909b568",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "572498579257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Github Actions"
            },
            "tags_all": {
              "Name": "VPC Github Actions"
            },
            "vpc_id": "vpc-0516980e3e7366903"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:572498579257:vpc/vpc-0516980e3e7366903",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07f4a824937fb1b58",
            "default_route_table_id": "rtb-0038dca4f6771fbcd",
            "default_security_group_id": "sg-026091a12982c40be",
            "dhcp_options_id": "dopt-098b30c2f6f94e609",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0516980e3e7366903",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0038dca4f6771fbcd",
            "owner_id": "572498579257",
            "tags": {
              "Name": "VPC Github Actions"
            },
            "tags_all": {
              "Name": "VPC Github Actions"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:572498579257:security-group/sg-0235e68ed3099a26c",
            "description": "private_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0235e68ed3099a26c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0337026bb2f6f2e75"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0337026bb2f6f2e75"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_security_group",
            "name_prefix": "",
            "owner_id": "572498579257",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0516980e3e7366903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:572498579257:security-group/sg-0337026bb2f6f2e75",
            "description": "public_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0337026bb2f6f2e75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              }
            ],
            "name": "public_security_group",
            "name_prefix": "",
            "owner_id": "572498579257",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0516980e3e7366903"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}